# market-data-adaptor-demo

./: README.md
app/connectivity/binance-md/: README.md  config.yaml  pyproject.toml
app/connectivity/binance-md/src/demo/connectivity/binance_md/: __main__.py  config.py  market_data_handler.py  order_book_sequencer.py  utils.py  websocket_event_handler.py
app/connectivity/binance-md/test/demo/connectivity/binance_md/: test_market_data_handler.py  test_order_book_sequencer.py  test_response.py  test_utils.py  test_websocket_event_handler.py
lib/connectivity/common/: README.md  pyproject.toml
lib/connectivity/common/src/demo/connectivity/common/: exceptions.py  json.py  order_book_l2.py  websocket_feed.py
lib/connectivity/common/test/demo/connectivity/common/: test_json.py  test_order_book_l2.py  test_websocket_feed.py
